# utools-novel-reader

./: .env  .eslintcache  .eslintrc.js  .gitignore  .npmrc  .prettierrc.js  README.md  babel.config.js  config-overrides.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vue.config.js
data/: Cargo.toml
data/src/: lib.rs  store.rs
data/src/store/: config.rs  read_record.rs  setting.rs  theme.rs  total_data.rs
data/src/store/config/: content_config.rs  novel_info_config.rs  regex_config.rs  search_config.rs  total_config.rs  url_config.rs
public/: index.html
result/: README.md  index.html  package-lock.json  package.json  plugin.json  preload.js
result/css/: chunk-40f3b4d7.a1e00919.css  chunk-6fade793.319a1b00.css  chunk-e1d25146.e9d9f637.css
result/js/: app.d66e92b7.js  app.d66e92b7.js.map  chunk-008631f6.6565dc7b.js  chunk-008631f6.6565dc7b.js.map  chunk-1e7e8c2c.bef2c36c.js  chunk-1e7e8c2c.bef2c36c.js.map  chunk-40f3b4d7.eee189cc.js  chunk-40f3b4d7.eee189cc.js.map  chunk-6fade793.33d16185.js  chunk-6fade793.33d16185.js.map  chunk-b0005a2e.0708f4aa.js  chunk-b0005a2e.0708f4aa.js.map  chunk-e1d25146.ca6310c8.js  chunk-e1d25146.ca6310c8.js.map  chunk-f251dc7c.f51c5b10.js  chunk-f251dc7c.f51c5b10.js.map  chunk-fa460158.115db41b.js  chunk-fa460158.115db41b.js.map  chunk-vendors.ae1cbd11.js  chunk-vendors.ae1cbd11.js.map
result/vue/: index.html
src/: App.tsx  App.vue  app.scss  index.css  index.d.ts  index.scss  index.tsx  main.js  main.ts  main.tsx  react-app-env.d.ts
src/components/: header.vue  myTabs.tsx  (+4 more)
(+233 files in other folders)
