[package]
name = "data"
version = "0.1.0"
authors = ["root <2108412077@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version="1.0.125",features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.50"
web-sys = { version = "0.3.4",features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', ] }
serde_json = "1.0.64"
